// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PanelColorSettings matches the snapshot 1`] = `
<Component
  colorSettings={
    Array [
      Object {
        "label": "border color",
        "onChange": [Function],
        "value": "#000",
      },
      Object {
        "label": "background color",
        "onChange": [Function],
        "value": "#111",
      },
    ]
  }
  colors={Array []}
  title="Test Title"
/>
`;

exports[`PanelColorSettings should render a color panel if at least one setting specifies some colors to choose 1`] = `
<Component
  colorSettings={
    Array [
      Object {
        "colors": Array [
          Object {
            "color": "#ff0000",
            "name": "Red",
            "slug": "red",
          },
        ],
        "label": "border color",
        "onChange": [Function],
        "value": "#000",
      },
      Object {
        "label": "background color",
        "onChange": [Function],
        "value": "#111",
      },
    ]
  }
  colors={Array []}
  disableCustomColors={true}
  title="Test Title"
/>
`;

exports[`PanelColorSettings should render a color panel if at least one setting supports custom colors 1`] = `
<Component
  colorSettings={
    Array [
      Object {
        "label": "border color",
        "onChange": [Function],
        "value": "#000",
      },
      Object {
        "disableCustomColors": false,
        "label": "background color",
        "onChange": [Function],
        "value": "#111",
      },
    ]
  }
  colors={Array []}
  disableCustomColors={true}
  title="Test Title"
/>
`;
